--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ footer .footer-address{
 
 footer .footer-links{
     flex: 7;
+    float:right;
 }
 
 footer .footer-links ul {  
@@ -100,4 +101,15 @@ footer .footer-links ul{
 .page-end-below-footer label a{
     text-decoration: none;
     color: white;
+}
+
+.second-logo{
+	flex:1;
+	float:right;
+	clear:right;
+    	padding-left: 10px;
+    	padding-right: 10px;
+    	padding-top: 10px;
+	overflow:visible;
+	margin-right:1px;
 }
