--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,19 @@ footer .footer-links ul{
     flex-wrap: wrap;
 }
 
+footer.second-logo{
+    flex: 1;
+    margin: 0px;
+    padding: 0px;
+}
+
+footer .second-logo img{
+    width: 100px;
+    height: auto;
+    margin: 0px;
+    padding: 0px;
+}
+
 @media only screen and (max-width: 768px) {
     /*When Site is viewed from tablet logo and address will be removed*/
     footer .footer-logo{
