--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,54 @@ body{ /* Whole Website Font-Family is Sans-Serif*/
 @keyframes FadingOutAnimation{  /*Fadeing Out Animation*/
     from{opacity:1} to{opacity:0}
 }
-
-/*Footer - Done By Muthu Palaniyappan OL*/
+/*Side Pannel*/
+.sidepanel  {
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidepanel a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidepanel a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidepanel .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+  }
+  
+  .openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #111;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+  }
+  
+  .openbtn:hover {
+    background-color:#444;
+  }
+}
+/*Footer*/
 footer{
     background-color: black;
     overflow: hidden;
@@ -103,7 +149,7 @@ footer .second-logo img{
     }
 }
 
-/*Bellow Footer - Done By Muthu Palaniyappan OL*/
+/*Bellow Footer*/
 .page-end-below-footer{
     background-color: black;
     text-align: center;
