--- a/css/style.css
+++ b/css/style.css
@@ -33,17 +33,61 @@ header .openbtn {
     color: white;
     padding: 10px 15px;
     border: none;
-  }
+}
   
 header .openbtn:hover {
     background-color: #444;
-  }
+}
 
 header  .float-right{
     position:absolute;
     right:0;
     top:0
-  }
+}
+
+header .parallax1{
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+    background-image: url('../Images/DemoPic1.png');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+header #parallax1 h1{
+    display: inline-block;
+    overflow: hidden;
+    padding: 4px;
+    margin-left: 25vw;
+    margin-top: 35vh;
+    background-color: white;
+}
+
+/*Section1*/
+section .parallax2{
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+    background-image: url('../Images/DemoPic2.png');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/*Section2*/
+section .parallax3{
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+    background-image: url('../Images/DemoPic3.png');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 /*Side Pannel*/
 .overlay {
